Bug fix: image cropping

--- a/src/App.css
+++ b/src/App.css
@@ -160,7 +160,7 @@
     object-fit: cover;
     width: 60%;
     aspect-ratio: 1/1;
-    object-position: 0 0;
+    object-position: 50% 0;
     border-radius: 8px;
   }
 
